# odoo_comisiones

./: .gitignore  Algoritmo.drawio  LICENSE  README.md  a.ipynb
algoritmo/: NC_algoritmo.ipynb  algoritmo_PdV_No_Facturado_func.ipynb  algoritmo_cambio_precio_costo_odoo.py  algoritmo_cambio_precio_costo_odoo_func.ipynb  algoritmo_cobranza_mes.py  algoritmo_cobranza_mes_func.ipynb  algoritmo_costo_func.ipynb  algoritmo_precioycosto_compras_func.ipynb  algoritmo_ventas.py  algoritmo_ventas_mes.py  algoritmo_ventas_mes_func.ipynb  beta_algoritmo.ipynb  beta_algoritmo_func.ipynb  checks.ipynb  cobranza_bi_prueba_vendedora.ipynb  cobranza_prueba.ipynb  descriptions.py  prueba.ipynb  pruebas.ipynb  purchases_bi_prueba.ipynb  sales_bi_prueba.ipynb  sales_bi_prueba_vendedora.ipynb  tags_lineas_SAE.ipynb  wep.py
data/: Lineas Proveedores.xlsx  comisiones.db  localdb_algoritmo_comisiones.db
local_packages/matching_package/: README.md  pyproject.toml  setup.py
local_packages/matching_package/matching/: README.md  _conditions.py  main.py
local_packages/matching_package/matching.egg-info/: PKG-INFO  SOURCES.txt
local_packages/matching_package/src/matching/: __init__.py  _constants.py  _evaluations.py  _list_storer.py  _match_methods.py  _temp.py  _visual_progress.py
local_packages/matching_package/src/matching.egg-info/: PKG-INFO  SOURCES.txt
manage_BI/: prueba_BI.ipynb
manage_api/: Probar_Conexión_API.py  compras.ipynb  facturas.ipynb  payments PdV.ipynb  payments.ipynb  pdv.ipynb  prueba compras.ipynb  prueba cotizaciones.ipynb  prueba fact_doc to sale_line.ipynb  (+7 more)
(+109 files in other folders)
